Refactored to not use babel

--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "Streams",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register",
+    "test": "mocha",
     "test-watch": "mocha --compilers js:babel-core/register --watch",
-    "predist": "rm -rf dist/ && mkdirp dist/ && npm run compile",
-    "dist": "browserify index.js --standalone xstream | node tools/strip-comments.js > dist/xstream.js",
-    "postdist": "uglifyjs dist/xstream.js -o dist/xstream.min.js",
-    "compile": "babel src --out-dir lib"
+    "predist": "rm -rf dist/ && mkdir dist/",
+    "dist": "browserify src/Observable.js --standalone streamjs > dist/stream.js"
   },
   "repository": {
     "type": "git",
@@ -22,9 +20,6 @@
   },
   "homepage": "https://github.com/bodyloss/stream.js#readme",
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-preset-es2015": "^6.22.0",
     "browserify": "^14.0.0",
     "chai": "^3.5.0",
     "mocha": "^3.2.0"
